--- a/index.html
+++ b/index.html
@@ -326,10 +326,10 @@
 				<div class="row" id="product__section"></div>
         <div class="container">
             <div class="row col-md-12"  id="product__section">
-                <div class="col-md-12 col-sm-12 col-xs-12" style="margin-top:80px; margin-buttom: 40px;">
-                    <h2 class="section-title" >Products</h2>
+                <div class="col-md-12">
+                    <h2 class="section-title" style="<margin-top:80></margin-top:80>px">Products</h2>
                 </div>
-				<div class="col-md-4 col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1 image__overlay">
+				<div class="col-md-4 col-sm-6 col-xs-6 image__overlay">
 					<div class=" photo-grid  ">
 						<div class="grid-item">
 							<img src="img/categories/paint.jpg" alt="Avatar" class="image">
@@ -342,7 +342,7 @@
 						</div>
 					</div>
                 </div>
-				<div class="col-md-4 col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1 image__overlay">
+				<div class="col-md-4 col-sm-6 col-xs-6 image__overlay">
 					<div class=" photo-grid  ">
 						<div class="grid-item">
 							<img src="img/categories/tools.jpg" alt="Avatar" class="image">
@@ -354,7 +354,7 @@
 						</div>
 					</div>
                 </div>
-				<div class="col-md-4 col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1 image__overlay">
+				<div class="col-md-4 col-sm-6 col-xs-6 image__overlay">
 					<div class=" photo-grid  ">
 						<div class="grid-item">
 							<img src="img/categories/homehardware.jpg" alt="Avatar" class="image">
@@ -367,7 +367,7 @@
 						</div>
 					</div>
                 </div>
-				<div class="col-md-4 col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1 image__overlay">
+				<div class="col-md-4 col-sm-6 col-xs-6 image__overlay">
 					<div class=" photo-grid  ">
 						<div class="grid-item">
 							<img src="img/categories/electrical.jpg" alt="Avatar" class="image">
@@ -380,7 +380,7 @@
 						</div>
 					</div>
                 </div>
-				<div class="col-md-4 col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1 image__overlay">
+				<div class="col-md-4 col-sm-6 col-xs-6 image__overlay">
 					<div class=" photo-grid  ">
 						<div class="grid-item">
 							<img src="img/categories/plumbing.jpg" alt="Avatar" class="image">
@@ -393,7 +393,7 @@
 						</div>
 					</div>
                 </div>
-				<div class="col-md-4 col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1 image__overlay">
+				<div class="col-md-4 col-sm-6 col-xs-6 image__overlay">
 					<div class=" photo-grid  ">
 						<div class="grid-item">
 							<img src="img/categories/lawnoutdoor.jpg" alt="Avatar" class="image">
